--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,7 @@ add_executable(CheatServer src/cheat_server.cpp)
 target_link_libraries(CheatServer pthread)
 target_link_libraries(CheatServer tacopie)
 target_link_libraries(CheatServer evpp)
-target_link_libraries(CheatServer evnsq)
+target_link_libraries(CheatServer evnsqt)
 target_link_libraries(CheatServer mysqlcppconn)
 target_link_libraries(CheatServer ${Boost_LIBRARIES})
 target_link_libraries(CheatServer cheatlib)
