--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,10 @@
 cmake_minimum_required(VERSION 3.6)
 
 project(cheat)
+
 set(Boost_USE_STATIC_LIBS ON)
 set(Boost_USE_STATIC_RUNTIME OFF)
-find_package(Boost 1.58.0 REQUIRED COMPONENTS filesystem system thread regex)
+find_package(Boost 1.64.0 REQUIRED COMPONENTS filesystem system thread regex)
 
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads)
@@ -26,7 +27,7 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
 link_directories("/usr/local/lib")
 include_directories("/usr/local/include")
-#include_directories("/usr/local/mysql/connector-c++-2.0/include")
+
 
 include_directories(SYSTEM "${Boost_INCLUDE_DIRS}")
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/src")
@@ -34,12 +35,14 @@ link_libraries(pthread)
 link_libraries(tacopie)
 link_libraries(mysqlcppconn)
 link_libraries(boost_regex)
+link_libraries(boost_thread)
+link_libraries(boost_system)
 link_libraries(evpp)
 link_libraries(evnsq)
 
 set(CHEAT_SOURCES
-        src/ThreadPool.cpp
-        src/AntiCheat.cpp src/AntiCheat.cpp src/CheatWorker.cpp src/SQLWriter.cpp)
+        src/SimpleThreadPool.cpp
+        src/AntiCheat.cpp src/CheatWorker.cpp src/SQLWriter.cpp)
 
 add_library(cheatlib STATIC ${CHEAT_SOURCES})
 
@@ -50,5 +53,7 @@ target_link_libraries(CheatServer tacopie)
 target_link_libraries(CheatServer evpp)
 target_link_libraries(CheatServer evnsq)
 target_link_libraries(CheatServer mysqlcppconn)
-target_link_libraries(CheatServer ${Boost_LIBRARIES})
+target_link_libraries(CheatServer boost_regex)
+target_link_libraries(CheatServer boost_thread)
+target_link_libraries(CheatServer boost_system)
 target_link_libraries(CheatServer cheatlib)
